--- a/style.css
+++ b/style.css
@@ -118,3 +118,21 @@ footer p {
     margin: 0; /* Remove margem padrão dos parágrafos dentro do footer */
     text-align: right; /* Garante alinhamento à direita para cada parágrafo do footer */
 }
+
+#botao_voltar_para_portfolio {
+  width: 300px;
+  height: 50px;
+  background-color: #1db768;
+  color: white;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 10px;
+  font-size: 14px;
+  cursor: pointer;
+  left: 50%;
+  margin-right: -50px;
+  margin-top: 40%;
+  bottom: 20px;
+  right: 20px;
+  transform: translate(90%, 55%);
+}
